--- a/index.html
+++ b/index.html
@@ -13,49 +13,107 @@
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
-  <body>
+
+
+  <body width = "device-width">
 
 
     <div class="header shuffle-over-transition">
       <div class="background">
-        <img src="images/cover.png" alt="" class = "responsive-img">
+        <img src="images/blank.gif" alt="">
       </div>
       <div class="header-wrapper row valign-wrapper">
         <div class="col s12">
-          <button class="read-more"><i class="icon-caret-down"></i></button>
+        <img src = "images/headshots.png" style = "width:30%">
+        <h1>Dave + Lorraine</h1>
+        <h3>SBP | SBVP</h3>
+        <button class="read-more"><i class="icon-caret-down"></i></button>
         </div>
       </div>
     </div>
 
+
+
         <div class="circle-reveal-intro full-height">
       <div class="fixed-wrapper">
         <div class="circle-reveal-wrapper header light">
-          <div class="circle-background white"></div>
+          <div class="circle-background purple"></div>
           <div class="header-wrapper row valign-wrapper">
             <div class="col s12 m8 offset-m2">
-              <h1>Dave Singh</h1>
-              <span class="tagline">I'm a junior in Mechanical & Biomedical Engineering. I'm running to be your Student Body President because I want to help lead Carnegie Mellon to a brighter future and I hope you can help me get there. Most of what I do and what I've done is to further my goal of helping people wherever I am. I'm in MechE/BME because I want to help people who have medical impairments regain their ability to move. I'm an RA in Hamerschlag because I want to help first-years find their passions, pursue their dreams, be caught up with all the resources CMU has to offer, and feel comfortable in their living space. I am a CMU student because I want to make my mark on the world and there's no place I'd rather learn how. 
+              <h1 style="color:white">Dave Singh</h1>
+              <span style="color:white"><p>I'm a junior in Mechanical & Biomedical Engineering. I'm running to be your Student Body President because I want to help lead Carnegie Mellon to a brighter future and I hope you can help me get there. Most of what I do and what I've done is to further my goal of helping people wherever I am. I'm in MechE/BME because I want to help people who have medical impairments regain their ability to move. I'm an RA in Hamerschlag because I want to help first-years find their passions, pursue their dreams, be caught up with all the resources CMU has to offer, and feel comfortable in their living space. I am a CMU student because I want to make my mark on the world and there's no place I'd rather learn how.</p>
 
-          As SBP, as an RA, as a CMU student, and as a human being, I will represent you and your interests, no matter what community or background you come from. You are all valid. You all deserve to have your thoughts and beliefs heard.</span>
+              <p>As SBP, as an RA, as a CMU student, and as a human being, I will represent you and your interests, no matter what community or background you come from. You are all valid. You all deserve to have your thoughts and beliefs heard.</p></span><br/>
               <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
           </div>
         </div>
 
         <div class="circle-reveal-wrapper header">
-          <div class="circle-background purple"></div>
+          <div class="circle-background white"></div>
           <div class="header-wrapper row valign-wrapper">
             <div class="col s12 m8 offset-m2">
               <h1>Lorraine Zhang</h1>
-              <span class="tagline">what a loser</span>
+              <p style="color:black">I'm a sophomore Information Systems major, and I'm currently serving as the Communications Chair of Student Senate. I'm running to be your Student Body Vice Preident because I'm passionate about making this campus a community where everyone can feel respected, included, and valued and where everyone has access to the resources they need to thrive and succeed.</p>
+              <p style="color:black">This begins with a Student government that understands and reacts to your needs. As Student Body Vice President, I will work to make your voices heard and keep Student Government transparent and accountable to you, and use my experience in Student Government to make a tangible impact on your student experience.</p><br/>
               <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
           </div>
         </div>
       </div>
 
+
+
       <div class="section background-layer valign-wrapper">
         <div class="container">
+
+
+
+
+
+        </div>
+      </div>
+    </div>
+
+    <div class="header full-height horizontal-half-transition">
+      <div class="background">
+        <img src="images/cmu.jpg" alt="" style="height:100%">
+      </div>
+      <div class="horizontal-half-wrapper right-side">
+        <div class="header-background white"></div>
+        <div class="header-wrapper row valign-wrapper">
+          <div class="col s12 m8 offset-m2 valign">
+            <h1>Engage</h1>
+            <span class="tagline">Making student government a body that understands and responds to your needs by incorporating your voices into the work we do.</span>
+            <button class="read-more"><i class="icon-caret-down"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="horizontal-half-wrapper">
+        <div class="header-background white"></div>
+        <div class="header-wrapper row valign-wrapper">
+          <div class="col s12 m8 offset-m2 valign">
+            <h1>Uplift</h1>
+            <span class="tagline">Creating a community where everyone can feel welcome and actively encouraging collaborative campus growth and dialogue.</span>
+            <button class="read-more"><i class="icon-caret-down"></i></button>
+          </div>
+        </div>
+      </div>
+
+            <div class="horizontal-half-wrapper right-side">
+        <div class="header-background white"></div>
+        <div class="header-wrapper row valign-wrapper">
+          <div class="col s12 m8 offset-m2 valign">
+            <h1>Empower</h1>
+            <span class="tagline">Empowering all students to become leaders in their organizations, communities, and personal lives and strengthening campus resources.</span>
+            <button class="read-more"><i class="icon-caret-down"></i></button>
+          </div>
+        </div>
+      </div>
+
+
+
+    </div>
 
                 <div class="col s12 m10 offset-m1">
           <div class="row">
@@ -66,13 +124,11 @@
                   <h3>Engage</h3>
                 </div>
                 <ul class="pricing-features">
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature disabled"><i class="icon-close"></i>item</li>
-                  <li class="pricing-feature disabled"><i class="icon-close"></i>item</li>
-                  <li class="pricing-feature disabled"><i class="icon-close"></i>item</li>
-                  <li class="pricing-feature disabled"><i class="icon-close"></i>item</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Increasing transparency through regular updates on the issues and initiatives Student Government is working on</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Including student input on important decisions</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Actively seeking out and collecting information on what matters to the student body through office hours, posters, polls, and anonymous channels of communication</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Holding Student Government accountable to the needs of students</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Working with all of Student Government to set goals and action plans that reflect the current needs and concerns of the students</li>
                 </ul>
               </div>
             </div>
@@ -85,13 +141,11 @@
 
                 </div>
                 <ul class="pricing-features">
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature disabled"><i class="icon-close"></i>item</li>
-                  <li class="pricing-feature disabled"><i class="icon-close"></i>item</li>
-                  <li class="pricing-feature disabled"><i class="icon-close"></i>item</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Working towards improved resources for students of all backgrounds</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Improving the international student experience through reducing CPT costs and increasing employment opportunities and resources</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Expanding resources for low-income students, including foodsharing and food pantry access, housing support, and streamlining the financial aid process</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Expanding and improving resources like UHS, CAPS, and the Title IX office</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Hosting events and initiatives to increase collaboration between colleges and disciplines</li>
                 </ul>
               </div>
             </div>
@@ -103,65 +157,17 @@
                   <h3>Empower</h3>
                 </div>
                 <ul class="pricing-features">
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>item</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Publicizing and hosting new opportunities and resources for CMU students to develop skills and become leaders</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Working with organization leaders to promote collaboration and define and work towards common, long-term goals</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Working with organizations and campus offices to promote an environment that is welcoming and safe for all</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Centralizing resources through a Student Government website and app</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Providing students with the institutional knowledge to create change and improve campus</li>
                 </ul>
               </div>
             </div>
 
           </div>
         </div>
-
-
-
-        </div>
-      </div>
-    </div>
-
-    <div class="header full-height horizontal-half-transition">
-      <div class="background">
-        <img src="images/" alt="">
-      </div>
-      <div class="horizontal-half-wrapper right-side">
-        <div class="header-background white"></div>
-        <div class="header-wrapper row valign-wrapper">
-          <div class="col s12 m8 offset-m2 valign">
-            <h1>Engage</h1>
-            <span class="tagline">placeholder text</span>
-            <button class="read-more"><i class="icon-caret-down"></i></button>
-          </div>
-        </div>
-      </div>
-      <div class="horizontal-half-wrapper">
-        <div class="header-background white"></div>
-        <div class="header-wrapper row valign-wrapper">
-          <div class="col s12 m8 offset-m2 valign">
-            <h1>Uplift</h1>
-            <span class="tagline">Second tagline with more information.</span>
-            <button class="read-more"><i class="icon-caret-down"></i></button>
-          </div>
-        </div>
-      </div>
-
-            <div class="horizontal-half-wrapper right-side">
-        <div class="header-background white"></div>
-        <div class="header-wrapper row valign-wrapper">
-          <div class="col s12 m8 offset-m2 valign">
-            <h1>Empower</h1>
-            <span class="tagline">placeholder text</span>
-            <button class="read-more"><i class="icon-caret-down"></i></button>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-
 
 
 
@@ -261,8 +267,8 @@
                     </span>
                   </div>
                   <div class="avatar-name">
-                    <span class="name">??</span>
-                    <span class="title">??</span>
+                    <span class="name">Eric Reeder</span>
+                    <span class="title">Photographer</span>
                   </div>
                 </div>
 
@@ -273,58 +279,34 @@
         </div>
       </div>
     </div>
-    <!-- Contact Us -->
-    <div class="section light valign-wrapper">
-      <div class="container">
-        <form>
-          <div class="row">
-            <div class="col s12"><h2 class="section-title">Contact Us</h2></div>
-            <div class="input-field col s6">
-              <input id="first_name" type="text">
-              <label for="first_name">First Name</label>
-            </div>
-            <div class="input-field col s6">
-              <input id="last_name" type="text">
-              <label for="last_name">Last Name</label>
-            </div>
-            <div class="input-field col s12">
-              <textarea id="message" class="materialize-textarea"></textarea>
-              <label for="message">Message</label>
-              <a class="waves-effect waves-light btn-large">Button</a>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
+
 
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container">
         <div class="row">
-          <div class="col s6 m3">
-          </div>
-          <div class="col s6 m3">
-            <h5>About</h5>
+
+          <div class="col s6 m4">
+            <h5>Contact Us</h5>
             <ul>
-              <li><a href="#!">Blog</a></li>
-              <li><a href="#!">Pricing</a></li>
-              <li><a href="#!">Docs</a></li>
+              <li><a href="mailto:dmsingh@cmu.edu">Email Dave</a></li>
+              <li><a href="mailto:lorrainejzhang@cmu.edu">Email Lorraine</a></li>
             </ul>
           </div>
-          <div class="col s6 m3">
-            <h5>Connect</h5>
+          <div class="col s6 m4">
+            <h5>Vote</h5>
             <ul>
-              <li><a href="#!">Community</a></li>
-              <li><a href="#!">Subscribe</a></li>
-              <li><a href="#!">Email</a></li>
+              <li><a href="#!">Polls open March 29th, 2018</a></li>
+              <li><a href="cmu.edu/studentvote">Vote Here</a></li>
+              <li><a href="https://stugov.andrew.cmu.edu/elections/elections/10:spring-2018-general-election/candidates/3601/platform">Check out our official platform</a></li>
             </ul>
           </div>
-          <div class="col s6 m3">
-            <h5>Contact</h5>
+          <div class="col s6 m4">
+            <h5>Find Us on Social Media</h5>
             <ul>
-              <li><a href="#!">Twitter</a></li>
-              <li><a href="#!">Facebook</a></li>
-              <li><a href="#!">Github</a></li>
+              <li><a href="https://www.facebook.com/davelorraine2018/">Facebook</a></li>
+              <li><a href="#!">Github (source code)</a></li>
+              <!-- <li><a href="#!">Github</a></li> -->
             </ul>
           </div>
         </div>
