added github link

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <h5>Find Us on Social Media</h5>
             <ul>
               <li><a href="https://www.facebook.com/davelorraine2018/">Facebook</a></li>
-              <li><a href="#!">Github (source code)</a></li>
+              <li><a href="https://github.com/lorrainejzhang/DLCampaignSite">Github (source code)</a></li>
               <!-- <li><a href="#!">Github</a></li> -->
             </ul>
           </div>
