--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
                 <ul class="pricing-features">
                   <li class="pricing-feature"><i class="icon-accept"></i>Publicizing and hosting new opportunities and resources for CMU students to develop skills and become leaders</li>
-                  <li class="pricing-feature"><i class="icon-accept"></i>Working with organization leaders to promote collaboration and define and work towards common, long-term goals</li>
+                  <li class="pricing-feature"><i class="icon-accept"></i>Facilitating growth by working with organization leaders who are already doing influential work on campus to promote collaboration and define and work towards common, long-term goals</li>
                   <li class="pricing-feature"><i class="icon-accept"></i>Working with organizations and campus offices to promote an environment that is welcoming and safe for all</li>
                   <li class="pricing-feature"><i class="icon-accept"></i>Centralizing resources through a Student Government website and app</li>
                   <li class="pricing-feature"><i class="icon-accept"></i>Providing students with the institutional knowledge to create change and improve campus</li>
