--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/startup-materialize.min.css">
-    <link rel = "icon" href = "images/logo-dark.png"
+    <link rel = "icon" href = "images/logo-dark-small.png"
 
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -77,7 +77,7 @@
 
     <div class="header full-height horizontal-half-transition">
       <div class="background">
-        <img src="images/cmu.jpg" alt="" style="height:100%">
+        <img src="images/cfa.jpg" alt="" style="width:100%; top:50%;">
       </div>
       <div class="horizontal-half-wrapper right-side">
         <div class="header-background white"></div>
@@ -169,116 +169,6 @@
           </div>
         </div>
 
-
-
-    <div class="section white full-height">
-      <div class="row valign">
-        <div class="col s12 m10 offset-m1 team">
-
-        <center><h1>Meet the Team</h1></center>
-
-<div class="row">
-            <div class="col s12">
-              <div class="divider"></div>
-            </div>
-
-            <div class="col s12 l12">
-              <div class="row">
-
-                <div class="col s12 m4">
-                  <div class="avatar-wrapper">
-                    <span class="avatar">
-                      <img src="http://placehold.it/256x256" alt="">
-                    </span>
-                  </div>
-                  <div class="avatar-name">
-                    <span class="name">Kevin Wainczak</span>
-                    <span class="title">Campaign Manager</span>
-                  </div>
-                </div>
-
-                <div class="col s12 m4">
-                  <div class="avatar-wrapper">
-                    <span class="avatar">
-                      <img src="http://placehold.it/256x256" alt="">
-                    </span>
-                  </div>
-                  <div class="avatar-name">
-                    <span class="name">Dan Cascaval</span>
-                    <span class="title">Designer</span>
-                  </div>
-                </div>
-
-                <div class="col s12 m4">
-                  <div class="avatar-wrapper">
-                    <span class="avatar">
-                      <img src="images/lorraine.jpg" alt="">
-                    </span>
-                  </div>
-                  <div class="avatar-name">
-                    <span class="name">Lorraine Zhang</span>
-                    <span class="title">Web Developer</span>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-
-
-
-
-          <div class="row">
-            <div class="col s12">
-              <div class="divider"></div>
-            </div>
-
-            <div class="col s12 l12">
-              <div class="row">
-
-                <div class="col s12 m4">
-                  <div class="avatar-wrapper">
-                    <span class="avatar">
-                      <img src="http://placehold.it/256x256" alt="">
-                    </span>
-                  </div>
-                  <div class="avatar-name">
-                    <span class="name">Benjamin Johnson-Staub</span>
-                    <span class="title">Policy Advisor</span>
-                  </div>
-                </div>
-
-                <div class="col s12 m4">
-                  <div class="avatar-wrapper">
-                    <span class="avatar">
-                      <img src="http://placehold.it/256x256" alt="">
-                    </span>
-                  </div>
-                  <div class="avatar-name">
-                    <span class="name">Trevor Lazar</span>
-                    <span class="title">??</span>
-                  </div>
-                </div>
-
-                <div class="col s12 m4">
-                  <div class="avatar-wrapper">
-                    <span class="avatar">
-                      <img src="http://placehold.it/256x256" alt="">
-                    </span>
-                  </div>
-                  <div class="avatar-name">
-                    <span class="name">Eric Reeder</span>
-                    <span class="title">Photographer</span>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
 
 
     <!-- Footer -->
