--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="header full-height horizontal-half-transition">
       <div class="background">
-        <img src="images/cfa.jpg" alt="" style="width:100%; top:50%;">
+        <img src="images/cfa-small.png" alt="" style="width:100%; top:50%;">
       </div>
       <div class="horizontal-half-wrapper right-side">
         <div class="header-background white"></div>
